--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="id" amp i-amphtml-binding i-amphtml-layout i-amphtml-no-boilerplate transformed="self;v=1" itemscope="itemscope" itemtype="https://schema.org/WebPage">
   <head>
+    <meta name="google-site-verification" content="2g5-iTFtExNO467CPXqjxfOVUtVZNON5tTGKBxs4U5s" />
+    <link rel="amphtml" href="https://gigaslot88gacor.site/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>GIGASLOT88 Slot Deposit Pulsa Tanpa Potongan 2024</title>
